feat: image stability + contextual improvements + loading UX
✅ IMAGE STABILITY FIXES:
- Added global memory cache to prevent image re-fetches across component instances
- Images now locked immediately after first load (no flicker)
- Synchronous cache check before async operations for instant display
- Same prediction = same image every time (guaranteed stability)

✅ IMAGE CONTEXTUAL IMPROVEMENTS:
- Added celebrity name detection (Haaland, Brad Pitt, Messi, Ronaldo, LeBron, Curry)
- Added comparison query patterns (taller than, better than, etc.)
- Enhanced custom category handling with better fallbacks
- Added user growth/tech patterns (users, hits, growth, launches)
- Improved query building priority: entity overrides → theme enrichments → category

✅ LOADING UX IMPROVEMENTS:
- Always show loading skeleton immediately (no empty states)
- Smooth 500ms fade-in transitions (prevents flicker)
- Blur-up technique: preview image shows while main image loads
- Optimized lazy loading with proper sizes attributes
- PredictionCardV3 thumbnails now have smooth fade-in

🔧 TECHNICAL:
- Global memory cache shared across all component instances
- Preview images load eagerly, main images lazy by default
- Better error handling and fallback states
- Improved loading state management

--- a/client/.vercel/project.json
+++ b/client/.vercel/project.json
@@ -1,1 +1,1 @@
-{"projectId":"fan-club-z","orgId":"team_1FoWrRWa3GoQ80NfCDmCzV48","projectName":"fan-club-z"}
+{"projectId":"prj_UTMTBPlXyqVme1qEqi8qtzzCwzOU","orgId":"team_1FoWrRWa3GoQ80NfCDmCzV48","projectName":"client"}
