--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
-  "buildCommand": "npm --prefix client install && npm --prefix client run build",
+  "buildCommand": "cd client && npm install && npm run build",
   "outputDirectory": "client/dist",
-  "installCommand": "npm --prefix client install --legacy-peer-deps",
+  "installCommand": "cd client && npm install",
   "rewrites": [
     {
       "source": "/(.*)",
