fix: Add API proxy rewrite to prevent catch-all from intercepting API routes
- Added /api/* rewrite to proxy to backend server
- This prevents the catch-all rewrite from serving index.html for API routes
- Fixes activity feed returning HTML instead of JSON

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
   "installCommand": "cd client && npm install",
   "rewrites": [
     {
+      "source": "/api/(.*)",
+      "destination": "https://fan-club-z.onrender.com/api/$1"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
