--- a/client/package.json
+++ b/client/package.json
@@ -76,7 +76,8 @@
     "web-vitals": "^3.5.2",
     "wouter": "^3.0.0",
     "zod": "^3.25.76",
-    "zustand": "^4.4.7"
+    "zustand": "^4.4.7",
+    "rollup-plugin-visualizer": "^5.12.0"
   },
   "devDependencies": {
     "@capacitor/android": "^7.4.4",
@@ -91,7 +92,6 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "globby": "^13.2.2",
     "rimraf": "^3.0.2",
-    "rollup-plugin-visualizer": "^5.12.0",
     "source-map-explorer": "^2.5.3",
     "typescript": "^5.3.3"
   },
