fix: OAuth redirect + wallet tx logging for production

--- a/client/.vercel/project.json
+++ b/client/.vercel/project.json
@@ -1,1 +1,1 @@
-{"projectId":"fan-club-z","orgId":"team_1FoWrRWa3GoQ80NfCDmCzV48","projectName":"fan-club-z"}
+{"projectId":"prj_ksSZhiJjGoOD9PxbursfWNZ9zZ2U","orgId":"team_1FoWrRWa3GoQ80NfCDmCzV48","projectName":"landing-page"}
