--- a/shared/package.json
+++ b/shared/package.json
@@ -1,9 +1,13 @@
 {
   "name": "@fanclubz/shared",
-  "version": "2.0.78",
-  "main": "src/index.ts",
+  "version":  "2.0.78",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "sideEffects": false,
   "scripts": {
-    "build": "echo build"
+    "build": "tsc -p tsconfig.json"
+  },
+  "devDependencies": {
+    "typescript": "^5.9.2"
   }
 }
