--- a/client/.env.production
+++ b/client/.env.production
@@ -9,3 +9,8 @@ NODE_ENV=production
 VITE_STRIP_LOGS=1
 VITE_ENABLE_SW=1
 VITE_WEB_VITALS_SAMPLE=0.05
+
+# Blockchain Configuration
+VITE_CHAIN_ID=84532
+VITE_USDC_ADDRESS=0x036CbD53842c5426634e7929541eC2318f3dCF7e
+VITE_BASE_ESCROW_ADDRESS=0x30c60f688A0082D1b761610ec3c70f6dC1374E95
