Deploy new escrow to Base Sepolia and wire address into env + chain_addresses

--- a/server/.env
+++ b/server/.env
@@ -14,7 +14,6 @@ USDC_ADDRESS=0x036CbD53842c5426634e7929541eC2318f3dCF7e
 RUNTIME_ENV=prod
 
 # Escrow contract address (auto-updated by deploy-escrow.sh)
-BASE_ESCROW_ADDRESS=0x30c60f688A0082D1b761610ec3c70f6dC1374E95
 
 To fix, add these lines to server/.env:
 ENABLE_BETS=1
@@ -29,3 +28,6 @@ PLATFORM_TREASURY_CHAIN_ID=84532
 ALLOW_TEST_UNLOCK=true
 PEXELS_API_KEY=MNVZGjhI06B65Il9QFX2GVU9D3nHftQzMZhMcWVNICUQtrKYbf4JoSKy
 UNSPLASH_ACCESS_KEY=KoLAbON534ZA8GNcNdZGTEoDtNBarlgJArGSokyuGkI
+
+# Escrow contract address (auto-updated by deploy-escrow.sh)
+BASE_ESCROW_ADDRESS=0x7B657F5140635241aec55f547d10F31cBDdF3105
