fix(frontend): enable referral tracking and fix leaderboard UI
- Add useReferralCapture and useReferralAttribution hooks to App.tsx
  - Captures referral codes from URL on app load
  - Attributes referrals when user signs up/logs in
- Fix leaderboard referrals tab text
  - Changed 'active · X total' to 'active referrals'
- Add migration documentation and phase guides

--- a/client/.env
+++ b/client/.env
@@ -27,3 +27,8 @@ VITE_WALLETCONNECT_PROJECT_ID=00bf3e007580babfff66bd23c646f3ff
 # Example: VITE_AUTH_REDIRECT_URL=http://192.168.4.123:5174/auth/callback
 # Leave commented to auto-detect
 # VITE_AUTH_REDIRECT_URL=
+
+# Feature Flags - Badges & Referrals
+VITE_BADGES_OG_ENABLE=1
+VITE_REFERRALS_ENABLE=1
+VITE_FRONTEND_URL=https://app.fanclubz.app
