--- a/client/.env.example
+++ b/client/.env.example
@@ -26,6 +26,18 @@ VITE_SUPABASE_ANON_KEY=your-anon-public-key-here
 # - All VITE_ prefixed variables are available in the browser
 # - Never commit actual credentials to version control
 
+# ============================================
+# Referral System Configuration
+# ============================================
+# Enable referral system (1 = enabled, 0 = disabled)
+# VITE_REFERRALS_ENABLE=1
+
+# ============================================
+# OG Badges System Configuration
+# ============================================
+# Enable OG founding user badges (1 = enabled, 0 = disabled)
+# VITE_BADGES_OG_ENABLE=1
+
 # API Base Path
 VITE_API_BASE=/api
 
