--- a/server/.env
+++ b/server/.env
@@ -31,3 +31,10 @@ UNSPLASH_ACCESS_KEY=KoLAbON534ZA8GNcNdZGTEoDtNBarlgJArGSokyuGkI
 
 # Escrow contract address (auto-updated by deploy-escrow.sh)
 BASE_ESCROW_ADDRESS=0x7B657F5140635241aec55f547d10F31cBDdF3105
+
+# OG Badges & Referrals Feature Flags
+BADGES_OG_ENABLE=1
+BADGES_OG_COUNTS=25,100,500
+REFERRAL_ENABLE=1
+REFERRAL_MAX_SIGNUPS_PER_IP_DAY=10
+REFERRAL_MAX_SIGNUPS_PER_DEVICE_DAY=5
