Phase 3A-3B: Idempotent settlement + admin finalize queue + demo fee fix
- Phase 3A: Split demo/crypto settlement, ensure idempotency
- Phase 3B: Add admin finalize queue endpoints
- Fix demo fee credit issue with regression guard
- Fix WalletConnect auto-connect loop
- Add admin routes to landing build
- Secure seed endpoint and restrict CORS

Recovery snapshot: fcz-recovered-20251226-133140

--- a/.env
+++ b/.env
@@ -17,3 +17,6 @@ PLATFORM_TREASURY_USER_ID=0x80f204ea1b41f08227b87334e1384e5687f332d2
 PLATFORM_TREASURY_EMAIL=tech@fanclubz.app
 PLATFORM_TREASURY_USERNAME=platform_treasury
 PLATFORM_TREASURY_CHAIN_ID=84532
+
+# Option 1: Add to server/.env
+ADMIN_USER_IDS=omoefe.onojeghuo@gmail.com
