--- a/server/package.json
+++ b/server/package.json
@@ -59,17 +59,18 @@
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.11",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.10.5",
-    "@types/pg": "^8.11.4",
     "@types/nodemailer": "^6.4.14",
+    "@types/pg": "^8.11.4",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.7",
     "jest": "^29.7.0",
     "supertest": "^6.3.3",
+    "ts-jest": "^29.4.6",
     "tsx": "^4.20.4",
     "typescript": "^5.9.2"
   }
