--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     region: oregon
     plan: free
     rootDir: server
-    buildCommand: npm install --legacy-peer-deps && npm run build
+    buildCommand: cd .. && npm install --legacy-peer-deps && npm run build:server
     startCommand: npm start
     envVars:
       - key: NODE_ENV
