Phases 3-6 + 7A: iOS login loop fix, safe area, PWA removal, release checklist, build isolation
Phase 3: Fix iOS login loop - deterministic OAuth
- Create nativeOAuth.ts centralized callback handler
- Register appUrlOpen listener ONCE at bootstrap (main.tsx)
- Use BUILD_TARGET instead of isNativePlatform() for gating
- Session persistence hardening (detectSessionInUrl: false for iOS)
- Remove duplicate listener registration code

Phase 4: Fix iOS safe area/notch overlap
- Header outer container: calc(56px + env(safe-area-inset-top))
- Apply safe-area padding only once (no double padding)
- Inner row fixed height prevents content overlap

Phase 5: Remove PWA install UX from iOS
- Gate PWAInstallManager: BUILD_TARGET !== 'web' || IS_NATIVE || STORE_SAFE_MODE
- Gate service worker: BUILD_TARGET !== 'web' || IS_NATIVE || STORE_SAFE_MODE
- Prevents PWA banners and SW registration in iOS builds

Phase 6: Release checklist + DEV diagnostics
- Add RELEASE_CHECKLIST.md with must-pass criteria
- Add getRuntimeDebugInfo() helper (DEV-only, gated by localStorage)
- Enable with: localStorage.setItem('DEBUG_RUNTIME', '1')

Phase 7A: iOS build target isolation
- Add .env.web and .env.ios (build target flags only)
- Add build scripts: build:web, build:ios, dev:web, dev:ios, cap:ios:ios
- Add IOS_BUILD.md documentation
- Use Vite modes (--mode web/ios) for isolation

All phases ensure web behavior unchanged while iOS work is properly isolated.

--- a/client/package.json
+++ b/client/package.json
@@ -8,14 +8,20 @@
   ],
   "scripts": {
     "dev": "vite",
+    "dev:web": "vite --mode web",
+    "dev:ios": "vite --mode ios",
     "clean": "rimraf dist .turbo .vite .cache",
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "lint": "eslint .",
     "build": "vite build",
+    "build:web": "vite build --mode web",
+    "build:ios": "vite build --mode ios",
     "preview": "vite preview --port 5175",
     "cap:sync": "npx cap sync",
     "cap:sync:ios": "npx cap sync ios",
     "cap:sync:android": "npx cap sync android",
+    "cap:ios:web": "npm run build:web && npx cap sync ios",
+    "cap:ios:ios": "npm run build:ios && npx cap sync ios",
     "ios:open": "npx cap open ios",
     "android:open": "npx cap open android",
     "preflight": "pnpm clean && pnpm lint && pnpm typecheck && pnpm check:dupes && pnpm build",
