--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "perf:lighthouse": "npx lighthouse http://localhost:5174 --view --preset=desktop"
   },
   "dependencies": {
+    "@byteowls/capacitor-oauth2": "^5.0.0",
     "@capacitor/app": "^8.0.0",
     "@capacitor/browser": "^8.0.0",
     "@capacitor/core": "^8.0.1",
