feat(phase0): Implement fail-safe platform detection and auth fixes
Phase 0: Web Stable + iOS Containment + Stop Stale Builds

CRITICAL FIXES:
1. Platform utility with fail-safe guards
   - Created client/src/config/platform.ts
   - Deep links require BOTH build target AND native runtime
   - Prevents iOS builds deployed to web from breaking production

2. Deterministic BUILD_TARGET
   - Added .env.web, .env.ios, .env.android (committed, no secrets)
   - Updated .gitignore to allow these specific files
   - BUILD_TARGET now always resolves correctly

3. Service Worker auth bypass
   - Updated sw.js to NEVER cache /auth routes or code/access_token params
   - Added cache version bump (2026-01-24-01) to invalidate old caches
   - Added forced update check after SW registration

4. PWA lazy initialization
   - Changed pwaManager to lazy getter (getPWAManager())
   - Prevents SW/PWA code from executing in native builds
   - Updated all PWA components to use lazy getter

5. OAuth flow fixes
   - Web: Explicit code exchange in AuthCallback.tsx
   - iOS: Use platform utility for deep link detection
   - All OAuth paths use fail-safe guards

6. Podfile fix
   - Reverted to standard node_modules paths (not pnpm store)

Files changed:
- .gitignore (allow .env.web/ios/android)
- client/.env.web, .env.ios, .env.android (NEW)
- client/src/config/platform.ts (NEW)
- client/public/sw.js (auth bypass, cache version)
- client/src/utils/pwa.ts (lazy getter, update check)
- client/src/lib/supabase.ts (platform utility)
- client/src/main.tsx (platform utility)
- client/src/lib/auth/nativeOAuth.ts (platform utility)
- client/src/pages/auth/AuthCallback.tsx (explicit code exchange)
- client/src/components/PWAInstallManager.tsx (lazy getter, platform utility)
- client/src/components/PWAInstallBanner.tsx (lazy getter, platform utility)
- client/src/components/SmartInstallPrompt.tsx (lazy getter, platform utility)
- client/ios/App/Podfile (standard paths)

Verification:
- Web: BUILD_TARGET=

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,10 @@ node_modules/.vite/
 .env.development
 .env.*
 *.local
+# Exception: Allow build-target env files to be committed (no secrets)
+!client/.env.web
+!client/.env.ios
+!client/.env.android
 
 # Logs
 *.log
