fix(build): Make BUILD_TARGET deterministic with MODE fallback + add iOS refresh script
CRITICAL FIX: BUILD_TARGET determinism and stale asset prevention

Root causes fixed:
1. BUILD_TARGET only read VITE_BUILD_TARGET, didn't fallback to MODE
   - If .env.ios missing but --mode ios used, BUILD_TARGET would be 'web'
   - Now falls back: VITE_BUILD_TARGET → MODE → 'web'
2. No single refresh script for iOS builds
   - Users had to remember: build:ios + cap sync ios
   - Now: cap:ios:refresh does both

Fixes:
- Updated buildTarget.ts to infer from MODE when VITE_BUILD_TARGET missing
- Added getBuildDebugInfo() helper (DEV only or VITE_DEBUG_BUILD=1)
- Enhanced bootstrap log with build debug info
- Added cap:ios:refresh script (build:ios + cap sync ios)

Files changed:
- client/src/config/buildTarget.ts (MODE fallback + debug helper)
- client/src/main.tsx (enhanced bootstrap log)
- client/package.json (added cap:ios:refresh script)

Build determinism:
- Priority: VITE_BUILD_TARGET → MODE → 'web'
- Example: --mode ios without .env.ios → BUILD_TARGET='ios' ✅
- Example: --mode web → BUILD_TARGET='web' ✅

Verification:
- iOS build completes successfully
- BUILD_TARGET now correctly inferred from MODE
- Refresh script available: npm run cap:ios:refresh

--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "cap:sync:android": "npx cap sync android",
     "cap:ios:web": "npm run build:web && npx cap sync ios",
     "cap:ios:ios": "npm run build:ios && npx cap sync ios",
+    "cap:ios:refresh": "npm run build:ios && npx cap sync ios",
     "ios:open": "npx cap open ios",
     "android:open": "npx cap open android",
     "preflight": "pnpm clean && pnpm lint && pnpm typecheck && pnpm check:dupes && pnpm build",
