--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "@capacitor/app": "^8.0.0",
     "@capacitor/browser": "^8.0.0",
+    "@capacitor/camera": "^8.0.0",
     "@capacitor/core": "^8.0.1",
     "@coinbase/wallet-sdk": "^4.3.7",
     "@fanclubz/shared": "file:../shared",
